feat(server): implement logout
